objects/External_Submission_Error__c.object
<CustomObject>
    <label>External Submission Error</label>
    <nameField>
        <label>External Submission Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Submission Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>